--- a/docker/bash.rc
+++ b/docker/bash.rc
@@ -14,12 +14,20 @@ alias ll='ls $LS_OPTIONS -l'
 alias l='ls $LS_OPTIONS -lA'
 
 # export these for make purposes
+ER_MODEL=${ER_MODEL:-"e1000"}
 export ER_MODEL
+
+ARCH=${ARCH:-"mips"}
 export ARCH
+
+CROSS_COMPILE=${CROSS_COMPILE:-"mips64-octeon-linux-"}
 export CROSS_COMPILE
+
+KERNELDIR=${KERNELDIR:-/root/headers}
 export KERNELDIR
 
-# add some convenient aliases
-alias er-makeconfig='make ARCH=$ARCH "ubnt_er_${ER_MODEL}_defconfig"'
-alias er-makemodule='make -j$(nproc) ARCH=$ARCH CROSS_COMPILE=$CROSS_COMPILE KERNELDIR=$KERNELDIR -C $KERNELDIR M=$(pwd) modules'
-alias er-make='make -j$(nproc) ARCH=$ARCH CROSS_COMPILE=$CROSS_COMPILE'
+# alias make to include the ARCH= and CROSS_COMPILE= variables
+alias make='make ARCH=$ARCH CROSS_COMPILE=$CROSS_COMPILE'
+alias make-j='make -j$(nproc) ARCH=$ARCH CROSS_COMPILE=$CROSS_COMPILE'
+alias make-defconf='make ARCH=$ARCH CROSS_COMPILE=$CROSS_COMPILE "ubnt_er_${ER_MODEL}_defconfig"'
+alias make-module='make ARCH=$ARCH CROSS_COMPILE=$CROSS_COMPILE KERNELDIR=$KERNELDIR -C $KERNELDIR M=$(PWD) modules'
